# server/gen/go/v1/amizone.pb.gw.go
@@ -335,6 +335,24 @@ func local_request_AmizoneService_GetCurrentExamResult_0(ctx context.Context, ma
 
 }
 
+func request_AmizoneService_GetAtpcListings_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq EmptyMessage
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetAtpcListings(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_AmizoneService_GetAtpcListings_0(ctx context.Context, marshaler runtime.Marshaler, server AmizoneServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq EmptyMessage
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetAtpcListings(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_AmizoneService_GetUserProfile_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq EmptyMessage
 	var metadata runtime.ServerMetadata
@@ -487,24 +505,6 @@ func local_request_AmizoneService_FillFacultyFeedback_0(ctx context.Context, mar
 	}
 
 	msg, err := server.FillFacultyFeedback(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
-func request_AmizoneService_GetAtpcPlacementDetails_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq EmptyMessage
-	var metadata runtime.ServerMetadata
-
-	msg, err := client.GetAtpcPlacementDetails(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_AmizoneService_GetAtpcPlacementDetails_0(ctx context.Context, marshaler runtime.Marshaler, server AmizoneServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq EmptyMessage
-	var metadata runtime.ServerMetadata
-
-	msg, err := server.GetAtpcPlacementDetails(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -707,6 +707,30 @@ func RegisterAmizoneServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 
 	})
 
+	mux.Handle("GET", pattern_AmizoneService_GetAtpcListings_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetAtpcListings", runtime.WithHTTPPathPattern("/api/v1/atpc_listings"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_AmizoneService_GetAtpcListings_0(ctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_AmizoneService_GetAtpcListings_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_AmizoneService_GetUserProfile_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -824,30 +848,6 @@ func RegisterAmizoneServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 
 		forward_AmizoneService_FillFacultyFeedback_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("GET", pattern_AmizoneService_GetAtpcPlacementDetails_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetAtpcPlacementDetails", runtime.WithHTTPPathPattern("/api/v1/atpc/placement"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_AmizoneService_GetAtpcPlacementDetails_0(ctx, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_AmizoneService_GetAtpcPlacementDetails_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -1060,6 +1060,27 @@ func RegisterAmizoneServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
+	mux.Handle("GET", pattern_AmizoneService_GetAtpcListings_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetAtpcListings", runtime.WithHTTPPathPattern("/api/v1/atpc_listings"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_AmizoneService_GetAtpcListings_0(ctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_AmizoneService_GetAtpcListings_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_AmizoneService_GetUserProfile_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1165,27 +1186,6 @@ func RegisterAmizoneServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("GET", pattern_AmizoneService_GetAtpcPlacementDetails_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetAtpcPlacementDetails", runtime.WithHTTPPathPattern("/api/v1/atpc/placement"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_AmizoneService_GetAtpcPlacementDetails_0(ctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_AmizoneService_GetAtpcPlacementDetails_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	return nil
 }
 
@@ -1206,6 +1206,8 @@ var (
 
 	pattern_AmizoneService_GetCurrentExamResult_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "exam_result"}, ""))
 
+	pattern_AmizoneService_GetAtpcListings_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "atpc_listings"}, ""))
+
 	pattern_AmizoneService_GetUserProfile_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "user_profile"}, ""))
 
 	pattern_AmizoneService_GetWifiMacInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "wifi_mac"}, ""))
@@ -1215,8 +1217,6 @@ var (
 	pattern_AmizoneService_DeregisterWifiMac_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "wifi_mac", "address"}, ""))
 
 	pattern_AmizoneService_FillFacultyFeedback_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 2, 4}, []string{"api", "v1", "faculty", "feedback", "submit"}, ""))
-
-	pattern_AmizoneService_GetAtpcPlacementDetails_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "v1", "atpc", "placement"}, ""))
 )
 
 var (
@@ -1236,6 +1236,8 @@ var (
 
 	forward_AmizoneService_GetCurrentExamResult_0 = runtime.ForwardResponseMessage
 
+	forward_AmizoneService_GetAtpcListings_0 = runtime.ForwardResponseMessage
+
 	forward_AmizoneService_GetUserProfile_0 = runtime.ForwardResponseMessage
 
 	forward_AmizoneService_GetWifiMacInfo_0 = runtime.ForwardResponseMessage
@@ -1245,6 +1247,4 @@ var (
 	forward_AmizoneService_DeregisterWifiMac_0 = runtime.ForwardResponseMessage
 
 	forward_AmizoneService_FillFacultyFeedback_0 = runtime.ForwardResponseMessage
-
-	forward_AmizoneService_GetAtpcPlacementDetails_0 = runtime.ForwardResponseMessage
 )
